fixed issues scrollbar mobile

--- a/frontend/designs/appfactory/css/icomoon/style.css
+++ b/frontend/designs/appfactory/css/icomoon/style.css
@@ -1,48 +1,73 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?5q6wvx');
-  src:  url('fonts/icomoon.eot?5q6wvx#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?5q6wvx') format('truetype'),
-    url('fonts/icomoon.woff?5q6wvx') format('woff'),
-    url('fonts/icomoon.svg?5q6wvx#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+    font-family: "icomoon";
+    src: url("fonts/icomoon.eot?y03v44");
+    src: url("fonts/icomoon.eot?y03v44#iefix") format("embedded-opentype"),
+        url("fonts/icomoon.ttf?y03v44") format("truetype"),
+        url("fonts/icomoon.woff?y03v44") format("woff"),
+        url("fonts/icomoon.svg?y03v44#icomoon") format("svg");
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: never;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
+[class^="icon-"],
+[class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: "icomoon" !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
 
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-bubble:before {
-  content: "\e900";
+    content: "\e900";
 }
 .icon-bulb:before {
-  content: "\e901";
+    content: "\e901";
 }
 .icon-heart:before {
-  content: "\e902";
+    content: "\e902";
 }
 .icon-pen:before {
-  content: "\e903";
+    content: "\e903";
 }
 .icon-phone:before {
-  content: "\e904";
+    content: "\e904";
 }
 .icon-star:before {
-  content: "\e905";
+    content: "\e905";
 }
 .icon-zoom:before {
-  content: "\e906";
+    content: "\e906";
+}
+.icon-phone:before {
+    content: "\e942";
+}
+.icon-envelop:before {
+    content: "\e945";
+}
+.icon-location:before {
+    content: "\e948";
+}
+.icon-burger:before {
+    content: "\e9bd";
+}
+.icon-google-plus:before {
+    content: "\ea8b";
+}
+.icon-facebook:before {
+    content: "\ea90";
+}
+.icon-twitter:before {
+    content: "\ea96";
+}
+.icon-linkedin:before {
+    content: "\eaca";
 }
